2010-08-24  kitone  <kitone@gna.org>

	* src/document.cc:
	Catch glib exception and display error dialog (open, save).

2010-08-24  kitone  <kitone@gna.org>

	* src/subtitle.cc:
	Fix bug #16524 : Broken character count (column translation).

2010-07-30  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix bug #16314 : Unable to set subtitle times after importing plain text.

2010-07-11  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-07-11  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.37.1 release.

2010-07-08  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	* src/we/waveformrenderercairo.cc:
	Fix bug #16016 : segfault (divide by zero).

2010-07-03  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.37.0 release.

2010-07-03  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Fix sort command.

2010-06-23  kitone  <kitone@gna.org>

	* src/debug.cc:
	* src/debug.h:
	* src/main.cc:
	* src/options.cc:
	* src/options.h:
	Update copyright to 2010.

2010-06-22  kitone  <kitone@gna.org>

	* src/debug.cc:
	* src/debug.h:
	* src/main.cc:
	* src/options.cc:
	* src/options.h:
	Code clean up. (thanks Erik)

2010-06-22  kitone  <kitone@gna.org>

	* src/we/waveformrenderercairo.cc:
	Fix bug #16016 : waveform segmentation fault.

2010-06-20  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	* plugins/actions/joindocument/joindocument.cc:
	* src/document.cc:
	* src/document.h:
	Code clean up.

2010-06-15  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix bug #16058 : crash at "find and replace" with regexp.

2010-06-13  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/dialog-scale-subtitles.ui:
	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16121 : Feature request: add option to scale all subtitles. (Orig.
	patch by Ludek <anomen>)
